--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,91 @@
-
-
-body{
-    background-color: #303030;
-    font-family: Helvetica, 'Times New Roman', Times, serif; 
+body {
+	background-color: #303030;
+	font-family: Helvetica, "Times New Roman", Times, serif;
 }
 
-
-h1, h2, h3, p {
-    
-    display: flex;
-    justify-content: center;
-    margin-top: 5%;
-    font-weight: bold;
-    color: #0EE2EA;
+h1,
+h2,
+h3,
+p {
+	display: flex;
+	justify-content: center;
+	margin-top: 5%;
+	font-weight: bold;
+	color: #0ee2ea;
 }
 
- 
-.checknews{
-    background-color: #fff;
-    height: 60px;
-    font-size: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bolder;
-    color: #c72c48;
+.checknews {
+	background-color: #fff;
+	height: 60px;
+	font-size: 2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: bolder;
+	color: #c72c48;
 }
 
-
-
-h1 { 
-    margin-top: 4rem;
-    font-size: 5rem;
+h1 {
+	margin-top: 4rem;
+	font-size: 5rem;
 }
 
-h3{
-    padding-top: 2rem;
-    border-top: solid 5px #804013;
-    text-align: center;
+h3 {
+	padding-top: 2rem;
+	border-top: solid 5px #804013;
+	text-align: center;
 }
 
-p{
-    font-size: 2rem;
+p {
+	font-size: 2rem;
 }
 
-h2, h3{
-    font-size: 2.5rem;  
+h2,
+h3 {
+	font-size: 2.5rem;
 }
 
-button{
-    border: solid 2px #804013;
-    color: #0EE2EA;
-    background-color: #303030;
-    font-size: 2rem;
-    font-weight: bold;
-    border-radius: 1rem;
-    padding: 1rem;
-    margin: 0.5rem;
+button {
+	border: solid 2px #804013;
+	color: #0ee2ea;
+	background-color: #303030;
+	font-size: 2rem;
+	font-weight: bold;
+	border-radius: 1rem;
+	padding: 1rem;
+	margin: 0.5rem;
+	cursor: pointer;
 }
 
-div.buttons{
-    display: flex;
-    justify-content: space-between;
+div.buttons {
+	display: flex;
+	justify-content: space-between;
 }
 
+button.photo {
+	border-radius: 50%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	cursor: pointer;
+}
 
+div.photo,
+div.pic {
+	display: flex;
+	justify-content: center;
+}
 
+img {
+	width: 400px;
+	height: 800px;
+	border-radius: 1rem;
+}
+.scary {
+	font-weight: bold;
+	color: #fff;
+}
 
-
+a {
+	text-decoration: none;
+}
